Fix false positive leaks when using custom -init methods that don't start with -init <https://webkit.org/b/190818> <rdar://problem/45476042>

Reviewed by Dan Bernstein.

Source/WebKit:

* UIProcess/Cocoa/WKWebViewContentProvider.h:
(-[WKWebViewContentProvider web_initWithFrame:webView:mimeType:]):
Add attribute to make this behave like an -init method.

Source/WebKitLegacy/mac:

* Misc/WebKitErrors.m: Move `descriptions` static global so that
it is accessible by both categories.
(-[NSError _webkit_initWithDomain:code:URL:]): Declare new
NSError (WebKitInternal) category.  Add attribute to make this
behave like an -init method.
(-[NSError _webkit_initWithDomain:code:URL:]): Move into new
NSError (WebKitInternal) category.  Modernize method.  Replace
constant NSString with `NSURLErrorFailingURLStringErrorKey`.

Canonical link: https://commits.webkit.org/205718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237365 268f45cc-cd09-0410-ab3c-d52691b4dbfc