Source/WebKitLegacy/mac/Misc/WebKitErrors.m
@@ -29,6 +29,7 @@
 #import <WebKitLegacy/WebKitErrors.h>
 
 #import "WebLocalizableStringsInternal.h"
+#import <Foundation/NSURLError.h>
 #import <WebKitLegacy/WebKitErrorsPrivate.h>
 #import <WebKitLegacy/WebNSURLExtras.h>
 
@@ -58,9 +59,30 @@ NSString * const WebKitErrorPlugInPageURLStringKey =    @"WebKitErrorPlugInPageU
 
 #define WebKitErrorDescriptionGeolocationLocationUnknown UI_STRING_INTERNAL("The current location cannot be found.", "WebKitErrorGeolocationLocationUnknown description")
 
-@implementation NSError (WebKitExtras)
-
 static NSMutableDictionary *descriptions = nil;
+
+@interface NSError (WebKitInternal)
+- (instancetype)_webkit_initWithDomain:(NSString *)domain code:(int)code URL:(NSURL *)URL __attribute__((objc_method_family(init)));
+@end
+
+@implementation NSError (WebKitInternal)
+
+- (instancetype)_webkit_initWithDomain:(NSString *)domain code:(int)code URL:(NSURL *)URL
+{
+    // Insert a localized string here for those folks not savvy to our category methods.
+    NSDictionary *descriptionsDict = [descriptions objectForKey:domain];
+    NSString *localizedDescription = descriptionsDict ? [descriptionsDict objectForKey:[NSNumber numberWithInt:code]] : nil;
+    NSDictionary *dict = [NSDictionary dictionaryWithObjectsAndKeys:
+        URL, @"NSErrorFailingURLKey",
+        [URL absoluteString], NSURLErrorFailingURLStringErrorKey,
+        localizedDescription, NSLocalizedDescriptionKey,
+        nil];
+    return [self initWithDomain:domain code:code userInfo:dict];
+}
+
+@end
+
+@implementation NSError (WebKitExtras)
 
 + (void)_registerWebKitErrors
 {
@@ -89,22 +111,6 @@ static NSMutableDictionary *descriptions = nil;
             [NSError _webkit_addErrorsWithCodesAndDescriptions:dict inDomain:WebKitErrorDomain];
         }
     });
-}
-
--(id)_webkit_initWithDomain:(NSString *)domain code:(int)code URL:(NSURL *)URL
-{
-    NSDictionary *descriptionsDict;
-    NSString *localizedDesc;
-    NSDictionary *dict;
-    // insert a localized string here for those folks not savvy to our category methods
-    descriptionsDict = [descriptions objectForKey:domain];
-    localizedDesc = descriptionsDict ? [descriptionsDict objectForKey:[NSNumber numberWithInt:code]] : nil;
-    dict = [NSDictionary dictionaryWithObjectsAndKeys:
-        URL, @"NSErrorFailingURLKey",
-        [URL absoluteString], @"NSErrorFailingURLStringKey",
-        localizedDesc, NSLocalizedDescriptionKey,
-        nil];
-    return [self initWithDomain:domain code:code userInfo:dict];
 }
 
 +(id)_webkit_errorWithDomain:(NSString *)domain code:(int)code URL:(NSURL *)URL
